Fixing layout issues

--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -103,14 +103,6 @@ body.fixed .wrapper {
 .content {
   padding: 2% 3%;
   background: #f9f9f9;
-  overflow: auto;
-
-  /* padding: 20px 15px; */
-  position: fixed;
-  padding-right: 250px;
-  width: 100%;
-  height: 100%;
-  padding-bottom: 130px;
 }
 
 /* Utility */
